--- a/index.html
+++ b/index.html
@@ -165,33 +165,29 @@
         - #NAVBAR
       -->
 
-      <nav class="navbar">
+      <!-- <nav class="navbar">
 
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>About</button>
+            <button class="navbar-link active" data-nav-link>About</button>
           </li>
-
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
-
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
-
-          <!-- <li class="navbar-item">
+          <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
-          </li> -->
-
-          <!-- <li class="navbar-item">
+          </li>
+          <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
-          </li> -->
+          </li>
 
         </ul>
 
-      </nav>
+      </nav> -->
 
       <!-- 
         - #HERO SECTION (newly added)
@@ -282,26 +278,32 @@
         - #ABOUT
       -->
 
-      <article class="about  active" data-page="about">
+      <article class="about active" data-page="about">
 
         <header>
           <h2 class="h2 article-title">About me</h2>
         </header>
 
         <section class="about-text">
-          <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
-          </p>
+            <p>
+                I’m Hendrik Fischer — a mathematician and actuary with a strong foundation in applied mathematics and computational modeling. 
+                I earned my Ph.D. from Leibniz University Hannover, where I focused on reduced-order modeling for complex physical systems 
+                such as fluid-structure interactions and porous media. My research aimed to develop efficient numerical methods for simulating 
+                multiphysics problems in a computationally tractable way.
+              </p>
+              <p>
+                In 2024, I transitioned into the insurance industry. As an actuary, I now apply my skills in mathematical modeling, Python programming, 
+                and AI to develop automation tools and tackle challenges in risk assessment and financial forecasting.
+              </p>
+              <p>
+                Beyond my professional work, I’m deeply interested in economics, finance, personal development, and innovative technologies like Bitcoin. 
+                I’m also a passionate runner and have been actively involved in community service through the 
+                <em>Freiwillige Feuerwehr</em> (Volunteer Fire Brigade), which I’ve been a part of since 2008.
+              </p>
+              <p>
+                Bringing together my academic background and practical experience, I strive to bridge the gap between theory and application—always curious, always learning.
+              </p>
 
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
-          </p>
         </section>
 
 
@@ -384,6 +386,126 @@
 
         </section>
 
+
+        <header>
+            <h2 class="h2 article-title">My resume</h2>
+        </header>
+
+        <section class="timeline">
+
+            <div class="title-wrapper">
+              <div class="icon-box">
+                <ion-icon name="book-outline"></ion-icon>
+              </div>
+  
+              <h3 class="h3">Work Experience</h3>
+            </div>
+  
+            <ol class="timeline-list">
+  
+              <li class="timeline-item">
+  
+                <h4 class="h4 timeline-item-title">Reserving Actuary @ HDI Global Specialty SE</h4>
+                <span>2024 - Present</span>
+                <p class="timeline-text">
+                    Working as a reserving actuary in the speciality lines of HDI Global Specialty SE.
+                </p>
+  
+              </li>
+  
+              <li class="timeline-item">
+  
+                <h4 class="h4 timeline-item-title">Research Visitor @ ENS Paris-Saclay</h4>
+  
+                <span>2022 - 2023</span>
+  
+                <p class="timeline-text">
+                    6 month research stay at the laboratoire de Mécanique Paris-Saclay in association with the IRTG 2657.
+                </p>
+  
+              </li>
+  
+              <li class="timeline-item">
+  
+                <h4 class="h4 timeline-item-title">Doctoral Candidate @ Leibniz Universität Hannover</h4>
+  
+                <span>2021 - 2024</span>
+  
+                <p class="timeline-text">
+                  Doctoral candidate at the Institute of Applied Mathematics at Leibniz Universität Hannover.
+                </p>
+  
+              </li>
+
+              <li class="timeline-item">
+  
+                <h4 class="h4 timeline-item-title">Student Assistant @ Technische Universität Hamburg</h4>
+  
+                <span>2021 - 2024</span>
+  
+                <p class="timeline-text">
+                    Student assistant for several courses as well as in multiple research projects.
+                </p>
+  
+              </li>              
+
+            </ol>
+        </section>
+    
+        <section class="timeline">
+
+            <div class="title-wrapper">
+              <div class="icon-box">
+                <ion-icon name="book-outline"></ion-icon>
+              </div>
+  
+              <h3 class="h3">Education</h3>
+            </div>
+  
+            <ol class="timeline-list">
+  
+              <li class="timeline-item">
+  
+                <h4 class="h4 timeline-item-title">Ph.D. (Dr. rer. nat.), Mathematics @ Leibniz Universität Hannover</h4>
+  
+                <span>2021 - 2024</span>
+  
+                <p class="timeline-text">
+                  PhD thesis: "Goal-oriented error control for space-time reduced-order modeling using incremental proper orthogonal decomposition"
+                </p>
+  
+              </li>
+  
+              <li class="timeline-item">
+  
+                <h4 class="h4 timeline-item-title">M.Sc. Industrial Mathematics @ University of Hamburg</h4>
+  
+                <span>2019 - 2021</span>
+  
+                <p class="timeline-text">
+                  Master thesis: "Model Reduction using Incremental Decomposition Techniques to support Unsteady Adjoint-Based Fluid Dynamic Shape Optimization."
+                  
+                </p>
+  
+              </li>
+  
+              <li class="timeline-item">
+  
+                <h4 class="h4 timeline-item-title">
+                    B.Sc. Technomathematics @ Technische Universität Hamburg
+                </h4>
+  
+                <span>2016 - 2019</span>
+  
+                <p class="timeline-text">
+                Bachelor thesis: "Analysis of the Interaction of Weakly Nonlinear Water Waves"
+                </p>
+  
+              </li>
+  
+            </ol>
+  
+          </section>
 
         <!--
           - testimonials
