first simple draft

--- a/index.html
+++ b/index.html
@@ -214,19 +214,19 @@
                   <ul class="social-list">
 
                     <li class="social-item">
-                      <a href="#" class="social-link">
+                      <a href="https://www.linkedin.com/in/hendrikfischer24/" class="social-link">
                         <ion-icon name="logo-linkedin"></ion-icon>
                       </a>
                     </li>
           
                     <li class="social-item">
-                      <a href="#" class="social-link">
+                      <a href="https://github.com/Hendrik240298" class="social-link">
                         <ion-icon name="logo-github"></ion-icon>
                       </a>
                     </li>
           
                     <li class="social-item">
-                      <a href="https://github.com/Hendrik240298" class="social-link">
+                      <a href="https://scholar.google.de/citations?user=nfEU9yoAAAAJ&hl" class="social-link">
                         <img src="assets/images/logo-scholar.png" alt="Google Scholar" style="width: 17px; height: 17px;" 
                         />
                       </a>
@@ -281,22 +281,22 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">In short</h3>
 
           <ul class="service-list">
 
             <li class="service-item">
 
-              <div class="service-icon-box">
+              <!-- <div class="service-icon-box">
                 <img src="./assets/images/icon-design.svg
                 " alt="design icon" width="40">
-              </div>
+              </div> -->
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">PhD in Mathematics</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Researching on adaptive reduced-order modeling for simulating physical phenomena, i.e., fluid dynamics or porous media.
                 </p>
               </div>
 
@@ -304,15 +304,15 @@
 
             <li class="service-item">
 
-              <div class="service-icon-box">
+              <!-- <div class="service-icon-box">
                 <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
-              </div>
+              </div> -->
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Actuary</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Transitioned from academia to the insurance industry in 2024, working as a reserving actuary and pursuing to become a DAV Actuary.
                 </p>
               </div>
 
@@ -320,15 +320,15 @@
 
             <li class="service-item">
 
-              <div class="service-icon-box">
+              <!-- <div class="service-icon-box">
                 <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
-              </div>
+              </div> -->
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Programmer</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Using Python and AI for solving challening problems and automations.
                 </p>
               </div>
 
@@ -336,15 +336,15 @@
 
             <li class="service-item">
 
-              <div class="service-icon-box">
+              <!-- <div class="service-icon-box">
                 <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
-              </div>
+              </div> -->
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Enthusiastic Learner</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  I am passionate to expand my knowledge daily especially in the fields of economics, finance, personal development and Bitcoin.
                 </p>
               </div>
 
@@ -479,7 +479,7 @@
           - testimonials
         -->
 
-        <section class="testimonials">
+        <!-- <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -575,14 +575,14 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
 
         <!--
           - testimonials modal
         -->
 
-        <div class="modal-container" data-modal-container>
+        <!-- <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -627,7 +627,7 @@
           - clients
         -->
 
-        <section class="clients">
+        <!-- <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -671,7 +671,7 @@
 
           </ul>
 
-        </section>
+        </section> --> 
 
       </article>
 
