push first final version (more content can be added or modified)

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <h4 class="h4 service-item-title">PhD in Mathematics</h4>
 
                 <p class="service-item-text">
-                  Researching on adaptive reduced-order modeling for simulating physical phenomena, i.e., fluid dynamics or porous media.
+                  I researched on adaptive reduced-order modeling for simulating physical phenomena, i.e., fluid dynamics or porous media.
                 </p>
               </div>
 
@@ -312,7 +312,7 @@
                 <h4 class="h4 service-item-title">Actuary</h4>
 
                 <p class="service-item-text">
-                  Transitioned from academia to the insurance industry in 2024, working as a reserving actuary and pursuing to become a DAV Actuary.
+                  I transitioned from academia to the insurance industry in 2024, working as a reserving actuary and pursuing to become a DAV Actuary.
                 </p>
               </div>
 
@@ -328,7 +328,7 @@
                 <h4 class="h4 service-item-title">Programmer</h4>
 
                 <p class="service-item-text">
-                  Using Python and AI for solving challening problems and automations.
+                  I love using Python and AI to solve challenging problems and making life easier with automations.
                 </p>
               </div>
 
