--- a/index.html
+++ b/index.html
@@ -254,19 +254,18 @@
 
         <section class="about-text">
             <p>
-                I’m Hendrik Fischer — a mathematician and actuary with a strong foundation in applied mathematics and computational modeling. 
-                I earned my Ph.D. from Leibniz University Hannover, where I focused on reduced-order modeling for complex physical systems 
-                such as fluid-structure interactions and porous media. My research aimed to develop efficient numerical methods for simulating 
-                multiphysics problems in a computationally tractable way.
+                Hi &#128075 I am Hendrik Fischer — <b>a mathematician and actuary</b> with a strong foundation in numerical mathematics and scientific computing. 
+                I earned my <b>Ph.D. from Leibniz University Hannover</b>, where I focused on reduced-order modeling for physical systems 
+                such as fluid dynamics and porous media. 
+                My research was motivated to develop data-driven numerical models which require as little computational resources as possible by adapting the models on-the-fly to new parametric settings.
               </p>
               <p>
-                In 2024, I transitioned into the insurance industry. As an actuary, I now apply my skills in mathematical modeling, Python programming, 
-                and AI to develop automation tools and tackle challenges in risk assessment and financial forecasting.
+                In 2024, <b>I transitioned into the insurance sector to work as a reserving actuary</b>. Therefore, I am currently <b>pursuing to become a DAV actuary</b>.
               </p>
               <p>
                 Beyond my professional work, I’m deeply interested in economics, finance, personal development, and innovative technologies like Bitcoin. 
-                I’m also a passionate runner and have been actively involved in community service through the 
-                <em>Freiwillige Feuerwehr</em> (Volunteer Fire Brigade), which I’ve been a part of since 2008.
+                I’m also a passionate runner. 
+                In bith my work as well as in my personal life, I love using Python and AI to solve challenging problems and make life easier through automations.
               </p>
               <p>
                 Bringing together my academic background and practical experience, I strive to bridge the gap between theory and application—always curious, always learning.
@@ -281,7 +280,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">In short</h3>
+          <!-- <h3 class="h3 service-title">In short</h3> -->
 
           <ul class="service-list">
 
@@ -292,59 +291,11 @@
                 " alt="design icon" width="40">
               </div> -->
 
+              <img src="./assets/images/icon-quote.svg" alt="quote icon">
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">PhD in Mathematics</h4>
-
+                <h4 class="h4 service-item-title">My self-image as an Actuary </h4>
                 <p class="service-item-text">
-                  I researched on adaptive reduced-order modeling for simulating physical phenomena, i.e., fluid dynamics or porous media.
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <!-- <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
-              </div> -->
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Actuary</h4>
-
-                <p class="service-item-text">
-                  I transitioned from academia to the insurance industry in 2024, working as a reserving actuary and pursuing to become a DAV Actuary.
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <!-- <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
-              </div> -->
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Programmer</h4>
-
-                <p class="service-item-text">
-                  I love using Python and AI to solve challenging problems and making life easier with automations.
-                </p>
-              </div>
-
-            </li>
-
-            <li class="service-item">
-
-              <!-- <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
-              </div> -->
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Enthusiastic Learner</h4>
-
-                <p class="service-item-text">
-                  I am passionate to expand my knowledge daily especially in the fields of economics, finance, personal development and Bitcoin.
+                    As an actuary, I leverage my expertise in mathematical modeling and scientific computing, along with my passion for economics, finance and programming, to analyze risk and navigate uncertainty.
                 </p>
               </div>
 
