--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 In 2024, <b>I transitioned into the insurance sector to work as a reserving actuary</b>. Therefore, I am currently <b>pursuing to become a DAV actuary</b>.
               </p>
               <p>
-                Beyond my professional work, I’m deeply interested in economics, finance, personal development, and innovative technologies like Bitcoin. 
+                Beyond my professional work, <b>I’m deeply interested in economics, finance, personal development, and Bitcoin.</b>
                 I’m also a passionate runner. 
                 In bith my work as well as in my personal life, I love using Python and AI to solve challenging problems and make life easier through automations.
               </p>
@@ -423,6 +423,122 @@
               </li>
   
             </ol>
+  
+          </section>
+
+
+          <section class="skill">
+
+            <header>
+                <h2 class="h2 article-title">My Skills</h2>
+            </header>
+
+            <!-- <h3 class="h3 skills-title">My skills</h3> -->
+  
+            <ul class="skills-list content-card">
+  
+              <li class="skills-item">
+  
+                <div class="title-wrapper">
+                  <h5 class="h5">Python</h5>
+                  <data value="90">90%</data>
+                </div>
+  
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 90%;"></div>
+                </div>
+  
+              </li>
+  
+              <li class="skills-item">
+  
+                <div class="title-wrapper">
+                  <h5 class="h5">SQL</h5>
+                  <data value="70">70%</data>
+                </div>
+  
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 70%;"></div>
+                </div>
+  
+              </li>
+  
+              <li class="skills-item">
+  
+                <div class="title-wrapper">
+                  <h5 class="h5">ResQ</h5>
+                  <data value="80">80%</data>
+                </div>
+  
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 80%;"></div>
+                </div>
+  
+              </li>
+  
+  
+              <li class="skills-item">
+  
+                <div class="title-wrapper">
+                  <h5 class="h5">Excel</h5>
+                  <data value="65">65%</data>
+                </div>
+  
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 65%;"></div>
+                </div>
+  
+              </li>
+            
+              <li class="skills-item">
+  
+                <div class="title-wrapper">
+                  <h5 class="h5">Scientific Computing</h5>
+                  <data value="85">85%</data>
+                </div>
+  
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 85%;"></div>
+                </div>
+  
+              </li>
+  
+  
+              <li class="skills-item">
+  
+                <div class="title-wrapper">
+                  <h5 class="h5">MatLab, C, C++</h5>
+                  <data value="60">60%</data>
+                </div>
+  
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width:60%;"></div>
+                </div>
+  
+              </li>
+
+              <li class="skills-item">
+  
+                <div class="title-wrapper">
+                  <h5 class="h5">Obsidian<h5>
+                  <data value="95">95%</data>
+                </div>
+  
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width:95%;"></div>
+                </div>
+  
+              </li>
+
+              <li class="skills-item">
+  
+                <div class="title-wrapper">
+                  <h5 class="h5" style="text-transform: none;">And many more...<h5>
+                </div>
+  
+              </li>
+
+            </ul>
   
           </section>
 
