use this version (although not perfect)

--- a/index.html
+++ b/index.html
@@ -254,23 +254,21 @@
 
         <section class="about-text">
             <p>
-                Hi &#128075 I am Hendrik Fischer — <b>a mathematician and actuary</b> with a strong foundation in numerical mathematics and scientific computing. 
-                I earned my <b>Ph.D. from Leibniz University Hannover</b>, where I focused on reduced-order modeling for physical systems 
-                such as fluid dynamics and porous media. 
-                My research was motivated to develop data-driven numerical models which require as little computational resources as possible by adapting the models on-the-fly to new parametric settings.
-              </p>
-              <p>
-                In 2024, <b>I transitioned into the insurance sector to work as a reserving actuary</b>. Therefore, I am currently <b>pursuing to become a DAV actuary</b>.
-              </p>
-              <p>
-                Beyond my professional work, <b>I’m deeply interested in economics, finance, personal development, and Bitcoin.</b>
-                I’m also a passionate runner. 
-                In bith my work as well as in my personal life, I love using Python and AI to solve challenging problems and make life easier through automations.
-              </p>
-              <p>
-                Bringing together my academic background and practical experience, I strive to bridge the gap between theory and application—always curious, always learning.
-              </p>
-
+            Hi &#128075; I'm Hendrik Fischer — <b>a mathematician and actuary</b> with a strong background in numerical mathematics and scientific computing. 
+            I earned my <b>Ph.D. from Leibniz University Hannover</b>, where my research focused on reduced-order modeling for physical systems such as fluid dynamics and porous media. 
+            I developed data-driven numerical models designed to minimize computational effort by dynamically adapting to new parametric conditions.
+            </p>
+            <p>
+            In 2024, <b>I transitioned into the insurance industry as a reserving actuary</b>, and I’m currently <b>pursuing qualification as a DAV actuary</b>.
+            </p>
+            <p>
+            Outside of work, <b>I'm a passionate about Austrian economics, finance, personal development, and Bitcoin</b>. 
+            Further, I enjoy leveraging Python and AI to solve complex problems and build automations making my life easier.
+            </p>
+            <p>
+             By uniting theoretical knowledge with practical skills, I’m driven to turn ideas into impactful solutions—always learning, always pushing boundaries.
+            </p>
+            <p></p>
         </section>
 
 
@@ -382,7 +380,19 @@
             </div>
   
             <ol class="timeline-list">
+
+                <li class="timeline-item">
   
+                <h4 class="h4 timeline-item-title">Actuary DAV @ Deutsche Aktuarsvereinigung</h4>
+  
+                <span>2025 - Present</span>
+  
+                <p class="timeline-text">
+                  Participation in the DAV Education and Training Programme
+                </p>
+  
+              </li>
+                
               <li class="timeline-item">
   
                 <h4 class="h4 timeline-item-title">Ph.D. (Dr. rer. nat.), Mathematics @ Leibniz Universität Hannover</h4>
