using bitcoin logo

--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
             In 2024, <b>I transitioned into the insurance industry as a reserving actuary</b>, and I’m currently <b>pursuing qualification as a DAV actuary</b>.
             </p>
             <p>
-            Outside of work, <b>I'm a passionate about Austrian economics, finance, personal development, and Bitcoin</b>. 
+            Outside of work, <b>I'm a passionate about Austrian economics, investing, personal development, and <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<i class="fa fa-bitcoin"></i>itcoin.</b>
             Further, I enjoy leveraging Python and AI to solve complex problems and build automations making my life easier.
             </p>
             <p>
              By uniting theoretical knowledge with practical skills, I’m driven to turn ideas into impactful solutions—always learning, always pushing boundaries.
             </p>
-            <p></p>
         </section>
 
 
@@ -388,7 +388,7 @@
                 <span>2025 - Present</span>
   
                 <p class="timeline-text">
-                  Participation in the DAV Education and Training Programme
+                  Participation in the DAV Education and Training Programme.
                 </p>
   
               </li>
