--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
         <section class="about-text">
             <p>
-            Hi &#128075; I'm Hendrik Fischer — <b>a mathematician and actuary</b> with a strong background in numerical mathematics and scientific computing. 
+            Hi &#128075; I'm Hendrik Fischer — <b>a mathematician and actuary</b> with a strong academic background in numerical mathematics and scientific computing. 
             I earned my <b>Ph.D. from Leibniz University Hannover</b>, where my research focused on reduced-order modeling for physical systems such as fluid dynamics and porous media. 
             I developed data-driven numerical models designed to minimize computational effort by dynamically adapting to new parametric conditions.
             </p>
