--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <h4 class="h4 timeline-item-title">Reserving Actuary @ HDI Global Specialty SE</h4>
                 <span>2024 - Present</span>
                 <p class="timeline-text">
-                    Working as a reserving actuary in the speciality lines of HDI Global Specialty SE.
+                    Working as a reserving actuary in the specialty lines of HDI Global Specialty SE.
                 </p>
   
               </li>
