update that shows collapsable information for specific items in my timelines

--- a/index.html
+++ b/index.html
@@ -325,12 +325,13 @@
                 <h4 class="h4 timeline-item-title">Reserving Actuary @ HDI Global Specialty SE</h4>
                 <span>2024 - Present</span>
                 <p class="timeline-text">
-                    Working as a reserving actuary in the speciality lines of HDI Global Specialty SE.
+                    Working as a reserving actuary in the speciality lines of HDI Global Specialty SE. <br>
+                    Stay tuned for more updates on my projects, initiatives, and passions in this role!
                 </p>
   
               </li>
   
-              <li class="timeline-item">
+              <li class="timeline-item no-collapse">
   
                 <h4 class="h4 timeline-item-title">Research Visitor @ ENS Paris-Saclay</h4>
   
@@ -350,11 +351,37 @@
   
                 <p class="timeline-text">
                   Doctoral candidate at the Institute of Applied Mathematics at Leibniz Universität Hannover.
+                  <br> 
+                  <span class="timeline-sublist-label">Publications:</span>
+                      <ul class="timeline-sublist">
+                        <li>Goal-oriented error control for space-time reduced-order modeling using incremental proper orthogonal decomposition (2024) &mdash; H. Fischer</li>
+                        <li>An Incremental Singular Value Decomposition Approach for Large-Scale Spatially Parallel &amp; Distributed but Temporally Serial Data -- Applied to Technical Flows (2024) &mdash; N. Kühl, H. Fischer, M. Hinze &amp; T. Rung</li>
+                        <li>Adaptive space-time model order reduction with dual-weighted residual (MORe DWR) error control for poroelasticity (2023) &mdash; H. Fischer, J. Roth, L. Chamoin, A. Fau, M. F. Wheeler &amp; T. Wick</li>
+                        <li>MORe DWR: Space-time goal-oriented error control for incremental POD-based ROM (2023) &mdash; H. Fischer, J. Roth, T. Wick, L. Chamoin &amp; A. Fau</li>
+                        <li>Reduced-order modeling for parametrized time-dependent Navier-Stokes equations (2023) &mdash; H. Fischer, T. Wick &amp; A. Fau</li>
+                    </ul>
+                    <span class="timeline-sublist-label">Conferences:</span>
+                    <ul class="timeline-sublist">
+                      <li>Young Mathematicians in Model Order Reduction 2024 (YMMOR 2024)</li>
+                      <li>International Symposium IRTG (2024)</li>
+                      <li>IRTG Annual Meeting (2023)</li>
+                      <li>deali.ii Workshop (2023)</li>
+                      <li>ECCOMAS ENUMATH (2023)</li>
+                      <li>ECCOMAS Young Investigators Conference YIC2023</li>
+                      <li>IRTG Workshop Strasbourg (2023)</li>
+                      <li>IACM COMPUTATIONAL FLUIDS CONFERENCE (CFC) 2023</li>
+                      <li>Young Mathematicians in Model Order Reduction 2023 (YMMOR 2023)</li>
+                      <li>IRTG Annual Meeting 2022</li>
+                      <li>GAMM Annual Meeting 2022</li>
+                      <li>IRTG Workshop (2022)</li>
+                      <li>Young Mathematicians in Model Order Reduction 2022 (YMMOR 2022)</li>
+                    </ul>
+                </p>
                 </p>
   
               </li>
 
-              <li class="timeline-item">
+              <li class="timeline-item no-collapse">
   
                 <h4 class="h4 timeline-item-title">Student Assistant @ Technische Universität Hamburg</h4>
   
@@ -381,7 +408,7 @@
   
             <ol class="timeline-list">
 
-                <li class="timeline-item">
+                <li class="timeline-item no-collapse">
   
                 <h4 class="h4 timeline-item-title">Actuary DAV @ Deutsche Aktuarsvereinigung</h4>
   
@@ -400,12 +427,35 @@
                 <span>2021 - 2024</span>
   
                 <p class="timeline-text">
-                  PhD thesis: "Goal-oriented error control for space-time reduced-order modeling using incremental proper orthogonal decomposition"
+                  PhD thesis: "Goal-oriented error control for space-time reduced-order modeling using incremental proper orthogonal decomposition" <br> 
+                  <span class="timeline-sublist-label">Publications:</span>
+                      <ul class="timeline-sublist">
+                        <li>Goal-oriented error control for space-time reduced-order modeling using incremental proper orthogonal decomposition (2024) &mdash; H. Fischer</li>
+                        <li>An Incremental Singular Value Decomposition Approach for Large-Scale Spatially Parallel &amp; Distributed but Temporally Serial Data -- Applied to Technical Flows (2024) &mdash; N. Kühl, H. Fischer, M. Hinze &amp; T. Rung</li>
+                        <li>Adaptive space-time model order reduction with dual-weighted residual (MORe DWR) error control for poroelasticity (2023) &mdash; H. Fischer, J. Roth, L. Chamoin, A. Fau, M. F. Wheeler &amp; T. Wick</li>
+                        <li>MORe DWR: Space-time goal-oriented error control for incremental POD-based ROM (2023) &mdash; H. Fischer, J. Roth, T. Wick, L. Chamoin &amp; A. Fau</li>
+                        <li>Reduced-order modeling for parametrized time-dependent Navier-Stokes equations (2023) &mdash; H. Fischer, T. Wick &amp; A. Fau</li>
+                    </ul>
+                    <span class="timeline-sublist-label">Conferences:</span>
+                    <ul class="timeline-sublist">
+                      <li>Young Mathematicians in Model Order Reduction 2024 (YMMOR 2024)</li>
+                      <li>International Symposium IRTG (2024)</li>
+                      <li>IRTG Annual Meeting (2023)</li>
+                      <li>deali.ii Workshop (2023)</li>
+                      <li>ECCOMAS ENUMATH (2023)</li>
+                      <li>ECCOMAS Young Investigators Conference YIC2023</li>
+                      <li>IRTG Workshop Strasbourg (2023)</li>
+                      <li>IACM COMPUTATIONAL FLUIDS CONFERENCE (CFC) 2023</li>
+                      <li>Young Mathematicians in Model Order Reduction 2023 (YMMOR 2023)</li>
+                      <li>IRTG Annual Meeting 2022</li>
+                      <li>GAMM Annual Meeting 2022</li>
+                      <li>IRTG Workshop (2022)</li>
+                      <li>Young Mathematicians in Model Order Reduction 2022 (YMMOR 2022)</li>
+                    </ul>
                 </p>
-  
               </li>
   
-              <li class="timeline-item">
+              <li class="timeline-item no-collapse">
   
                 <h4 class="h4 timeline-item-title">M.Sc. Industrial Mathematics @ University of Hamburg</h4>
   
@@ -418,7 +468,7 @@
   
               </li>
   
-              <li class="timeline-item">
+              <li class="timeline-item no-collapse">
   
                 <h4 class="h4 timeline-item-title">
                     B.Sc. Technomathematics @ Technische Universität Hamburg
