push umami web analytics

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+  
+  <!--
+    - umami analytics
+  -->
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="6fe0b384-4f9b-4f9e-bff4-419945380c70"></script>
 </head>
 
 <body>
